--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,7 @@
       <link rel="icon" href="favico.png">
       <meta property="og:type" content="website">
       <meta property="twitter:type" content="website">
+	  <title>Umbrella Labs :: eBook</title>
    </head>
    <body>
       <div id="__nuxt">
