--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/">Home2</HeaderLink>
+			<HeaderLink href="/blog">Blog22</HeaderLink>
+			<HeaderLink href="/about">About222</HeaderLink>
 <HeaderLink href="/thankyou">Thank You</HeaderLink>
 		</div>
 		<div class="social-links">
