--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -28,7 +28,7 @@
        <link rel="icon" href="favico.png">
       <meta property="og:type" content="website">
       <meta property="twitter:type" content="website">
-      <title>Umbrella Labs :: eBook</title>
+      <title>Umbrella Labs :: Thank You</title>
      
    
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,500,600,700,800,900%7COpen%20Sans:400,500,600,700,800,900%7CMontserrat:400,500,600,700,800,900%7CRoboto:400,500,600,700,800,900&amp;display=swap" media="all" onload="this.media='all'">
