--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -6,6 +6,10 @@
       <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="anonymous">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,500,600,700,800,900%7COpen%20Sans:400,500,600,700,800,900%7CMontserrat:400,500,600,700,800,900%7CRoboto:400,500,600,700,800,900&amp;display=swap" media="all" onload="this.media='all'">
       <style type="text/css"> 
+	  
+	  .sub-heading-0nn0QcW7syv h2{font-size:23px!important;font-weight:400!important;line-height:1.3em;}
+	  .sub-heading-0nn0QcW7syv h2::before{color:rgb(0, 0, 0);content:"";font-family:"Font Awesome 5 Free";margin-right:5px;font-weight:700;}
+	  
         .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
          #hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff;width:720px}@media screen and (min-width:0px) and (max-width:480px){#hl_main_popup{width:380px!important}}  
