--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -10,7 +10,7 @@
 	  .sub-heading-0nn0QcW7syv h2{font-size:20px!important;font-weight:400!important;line-height:1.3em;}
 	  .sub-heading-0nn0QcW7syv h2::before{color:rgb(0, 0, 0);content:"";font-family:"Font Awesome 5 Free";margin-right:5px;font-weight:700;}
 	  .sub-heading-aSF26ifMEr h2{font-size:23px!important;font-weight:400!important;line-height:1.3em;}
-	  
+	  .sub-heading-2A9Bx-4u9Ra h2{font-size:18px!important;font-weight:400!important;line-height:1.3em;}
 	  
         .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
@@ -69,12 +69,12 @@
                                              <div>
                                                 <div>
                                                    <picture class="hl-image-picture" style="display:block;">
-                                                      <source media="(max-width:900px) and (min-width: 768px)" srcset="logo_900_80.webp">
-                                                      <source media="(max-width:768px) and (min-width: 640px)" srcset="logo_768_80.webp">
-                                                      <source media="(max-width:640px) and (min-width: 480px)" srcset="logo_640_80.webp">
-                                                      <source media="(max-width:480px) and (min-width: 320px)" srcset="logo_480_80.webp">
-                                                      <source media="(max-width:320px)" srcset="logo_320_80.webp">
-                                                      <img src="ebook-logo.webp" alt="" style="width:500px !important;object-fit:unset;" class="img-none img-border-none img-effects-none hl-optimized mw-100" loading="lazy" data-animation-class="">
+                                                      <source media="(max-width:900px) and (min-width: 768px)" srcset="../logo_900_80.webp">
+                                                      <source media="(max-width:768px) and (min-width: 640px)" srcset="../logo_768_80.webp">
+                                                      <source media="(max-width:640px) and (min-width: 480px)" srcset="../logo_640_80.webp">
+                                                      <source media="(max-width:480px) and (min-width: 320px)" srcset="../logo_480_80.webp">
+                                                      <source media="(max-width:320px)" srcset="../logo_320_80.webp">
+                                                      <img src="../ebook-logo.webp" alt="" style="width:500px !important;object-fit:unset;" class="img-none img-border-none img-effects-none hl-optimized mw-100" loading="lazy" data-animation-class="">
                                                    </picture>
                                                 </div>
                                              </div>
