--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -10,7 +10,7 @@
 	  .sub-heading-0nn0QcW7syv h2{font-size:20px!important;font-weight:400!important;line-height:1.3em;}
 	  .sub-heading-0nn0QcW7syv h2::before{color:rgb(0, 0, 0);content:"";font-family:"Font Awesome 5 Free";margin-right:5px;font-weight:700;}
 	  .sub-heading-aSF26ifMEr h2{font-size:23px!important;font-weight:400!important;line-height:1.3em;}
-	  .sub-heading-2A9Bx-4u9Ra h2{font-size:18px!important;font-weight:400!important;line-height:1.3em;}
+	  .sub-heading-2A9Bx-4u9Ra h2{font-size:18px!important;font-weight:400!important;line-height:1.3em;font-family:Montserrat;padding:30px 0px;}
 	  
         .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
