--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@
    .bulletList-ZZKRB4BcE7 ul li p strong{font-weight:800;}
    
    .bulletList-QUJDFbL95u.text-output ul li,.bulletList-ZZKRB4BcE7.text-output ul li{list-style-type: "" !important;}
-   .bulletList-QUJDFbL95u.text-output ul li::marker, .bulletList-ZZKRB4BcE7.text-output ul li::marker {  font-family: "Font Awesome 5 Free"; font-weight: 700;
+   .bulletList-QUJDFbL95u.text-output ul li::marker, .bulletList-ZZKRB4BcE7.text-output ul li::marker { font-family: "Font Awesome 5 Free"; font-weight: 700;
   color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;}
    
 	 .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
@@ -152,7 +152,7 @@
                                           <button data-animation-class="" id="button-RwJ4hVxlrc_btn" style="" class="cbutton-RwJ4hVxlrc none btnshadow custom btn-vp btn-hp noBorder radius0 none" aria-label="Get Free Access ">
                                              <div style="" class="main-heading-group">
                                                 <div class="button-icon-start"></div>
-                                                <div class="main-heading-button">Get Free Access</div>
+                                                <div class="main-heading-button" id="myBtn">Get Free Access</div>
                                                 <div class="button-icon-end"></div>
                                              </div>
                                              <div style="display:none;left:50%;position:absolute;top:50%;transform:translate(-50%, -50%);" class="btn-loader-position">
@@ -334,5 +334,129 @@
             </div>
          </div>
       </div>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p class="poph">Enter Your Info Below To Get Instant Access</p>
+	<form action="https://ebook1umbrella.sales-c4c.workers.dev/thankyou/">
+    <label for="firstname">First Name*</label>
+    <input type="text" name="firstname" placeholder="First Name" required>
+    <br>
+    <!--<label for="lastname">Last name: </label>
+    <input type="text" name="lastname"  required>
+    <br>-->
+    <label for="email">Email*</label>
+    <input type="email" name="email" placeholder="Email" required>
+    <br>
+    <!--<label for="password">password: </label>
+    <input type="password" name="password"  required>
+    <br>-->
+    <input type="submit" value="Download Now">
+</form>
+  </div>
+
+</div>
+
+<style>
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+   border:10px solid #cbd5e0;
+  width: 50%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],input[type=email], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #9d0508;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #000;
+}
+
+.poph{text-align:center;font-size:20px;font-weight:400;}
+#myBtn{cursor:pointer;}
+</style>	  
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>  
    </body>
 </html>
