--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,11 +148,11 @@
                                           </div>
                                           <span></span>
                                        </div>
-                                       <div id="button-RwJ4hVxlrc" class="c-button c-wrapper button-RwJ4hVxlrc">
+                                       <div id="myBtn" class="c-button c-wrapper button-RwJ4hVxlrc">
                                           <button data-animation-class="" id="button-RwJ4hVxlrc_btn" style="" class="cbutton-RwJ4hVxlrc none btnshadow custom btn-vp btn-hp noBorder radius0 none" aria-label="Get Free Access ">
                                              <div style="" class="main-heading-group">
                                                 <div class="button-icon-start"></div>
-                                                <div class="main-heading-button" id="myBtn">Get Free Access</div>
+                                                <div class="main-heading-button">Get Free Access</div>
                                                 <div class="button-icon-end"></div>
                                              </div>
                                              <div style="display:none;left:50%;position:absolute;top:50%;transform:translate(-50%, -50%);" class="btn-loader-position">
