--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -152,7 +152,7 @@
                                           <button data-animation-class="" id="button-RwJ4hVxlrc_btn" style="" class="cbutton-RwJ4hVxlrc none btnshadow custom btn-vp btn-hp noBorder radius0 none" aria-label="Get Free Access ">
                                              <div style="" class="main-heading-group">
                                                 <div class="button-icon-start"></div>
-                                                <div class="main-heading-button">Get Free Access 00</div>
+                                                <div class="main-heading-button">Get Free Access</div>
                                                 <div class="button-icon-end"></div>
                                              </div>
                                              <div style="display:none;left:50%;position:absolute;top:50%;transform:translate(-50%, -50%);" class="btn-loader-position">
@@ -384,6 +384,7 @@
   padding: 20px;
    border:10px solid #cbd5e0;
   width: 50%;
+  font-family:Montserrat;
 }
 
 /* The Close Button */
