--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -315,7 +315,7 @@
                                        <div id="sub-heading-Y_vdJFIqtN" class="c-sub-heading c-wrapper">
                                           <div class="sub-heading-Y_vdJFIqtN text-output csub-heading-Y_vdJFIqtN noBorder radius0 none" data-animation-class>
                                              <div>
-                                                <h2><br>Copyright © 2024 | <a target="_blank" rel="noopener noreferrer nofollow" href="https://Umbrellalabs.is">Umbrellalabs.is</a> All rights reserved</h2>
+                                                <h2><br>Copyright © 2024 | <a target="_blank" rel="noopener noreferrer nofollow" href="https://Umbrellalabs.is">Umbrellalabs.is</a> All rights reserved.</h2>
                                              </div>
                                           </div>
                                           <span></span>
