--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,12 @@
    .bulletList-ZZKRB4BcE7 ul li h2{font-size:18px;line-height:1.3em;font-weight:400;}
    .bulletList-ZZKRB4BcE7 ul li p strong{font-weight:800;}
    
-   .bulletList-QUJDFbL95u.text-output ul li,.bulletList-ZZKRB4BcE7.text-output ul li{list-style-type: "" !important;}
+   .text-output ul li::before{ font-weight: 700;
+  color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;width:24px; height:24px;  content: url('https://ebook1umbrella.sales-c4c.workers.dev/bul-icon.png'); float:left; }
+   
+   <!--.bulletList-QUJDFbL95u.text-output ul li,.bulletList-ZZKRB4BcE7.text-output ul li{list-style-type: "" !important;}
    .bulletList-QUJDFbL95u.text-output ul li::marker, .bulletList-ZZKRB4BcE7.text-output ul li::marker { font-family: "Font Awesome 5 Free"; font-weight: 700;
-  color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;}
+  color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;} --->
    
 	 .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
