Update index.astro content css updated
content property css updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,10 @@
    .bulletList-ZZKRB4BcE7 ul li h2{font-size:18px;line-height:1.3em;font-weight:400;}
    .bulletList-ZZKRB4BcE7 ul li p strong{font-weight:800;}
    
-   .text-output ul li::before{ font-weight: 700; color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;width:24px; height:24px;  content: url('https://ebook1umbrella.sales-c4c.workers.dev/bul-icon.png'); float:left; }
-   
+  .text-output ul li {list-style:none; position: relative; padding-left: 30px;}
+
+.text-output ul li::before { content: ""; background: url('https://ebook1umbrella.sales-c4c.workers.dev/bul-icon.png') no-repeat;  background-size: 24px 24px;
+  width: 24px; height: 24px;  position: absolute;  left: 0; top: 0.2em;}
 	 .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
          .drop-zone-draggable .row-sev-ilhZem{margin:0 auto}
