Update index.astro li css updated
css updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,29 +14,9 @@
    .bulletList-ZZKRB4BcE7 ul li h2{font-size:18px;line-height:1.3em;font-weight:400;}
    .bulletList-ZZKRB4BcE7 ul li p strong{font-weight:800;}
    
-.text-output ul {
-  list-style: none; /* Remove default bullets */
-  padding-left: 0;
-}
-
-.text-output ul li {
-  position: relative;
-  padding-left: 32px; /* Make space for the icon */
-  margin-bottom: 8px;
-}
-
-.text-output ul li::before {
-  content: "";
-  background-image: url('https://ebook1umbrella.sales-c4c.workers.dev/bul-icon.png');
-  background-size: 24px 24px;
-  background-repeat: no-repeat;
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  left: 0;
-  top: 0.2em;
-}
-
+.bulletList-QUJDFbL95u.text-output ul li,.bulletList-ZZKRB4BcE7.text-output ul li{list-style-type: "" !important;}
+   .bulletList-QUJDFbL95u.text-output ul li::marker, .bulletList-ZZKRB4BcE7.text-output ul li::marker { font-family: "Font Awesome 5 Free"; font-weight: 700;
+  color: #971214; margin-right: .3em; margin-left: -1.5em; text-align: right;}
 
 	 .bg-fixed{bottom:0;top:0;left:0;right:0;position:fixed;overflow:auto;background-color:#ffffff} 
          .drop-zone-draggable .hl_main_popup{box-shadow:none;padding:20px;margin-top:0;border-color:#cbd5e0;border-width:10px;border-style:solid;background-color:#ffffff}
